--- a/20170615-zebra/builds/development/index.html
+++ b/20170615-zebra/builds/development/index.html
@@ -101,9 +101,110 @@
 
       <div id="filter" class="ui-widget"><input type="search" id="filter_box" placeholder="Search by lake or river" /></div>
 
-<!--       <div id="stats">
-        Found: <span class="foundYear"></span>
-      </div> -->
+      <div id="listing">
+        <div class='lakeselect'>Big Birch Lake</div>
+        <div class='lakeselect'>Big Cormorant Lake</div>
+        <div class='lakeselect'>Bryant Lake</div>
+        <div class='lakeselect'>Cass Lake</div>
+        <div class='lakeselect'>Charley Lake</div>
+        <div class='lakeselect'>Christmas Lake</div>
+        <div class='lakeselect'>Clearwater Lake</div>
+        <div class='lakeselect'>Crooked Lake</div>
+        <div class='lakeselect'>Cross Lake</div>
+        <div class='lakeselect'>Cuyuna Country State Recreation Area</div>
+        <div class='lakeselect'>Detroit Lake</div>
+        <div class='lakeselect'>East Spirit Lake</div>
+        <div class='lakeselect'>Fish Trap Lake</div>
+        <div class='lakeselect'>Forest Lake</div>
+        <div class='lakeselect'>Gilbert Lake</div>
+        <div class='lakeselect'>Gilbert Pit Lake</div>
+        <div class='lakeselect'>Green Lake</div>
+        <div class='lakeselect'>Gull Lake</div>
+        <div class='lakeselect'>Kerbs Lake</div>
+        <div class='lakeselect'>Kimble Lake</div>
+        <div class='lakeselect'>Lac Qui Parle</div>
+        <div class='lakeselect'>Lake Adley</div>
+        <div class='lakeselect'>Lake Andrew</div>
+        <div class='lakeselect'>Lake Brophy</div>
+        <div class='lakeselect'>Lake Carlos</div>
+        <div class='lakeselect'>Lake Cowdrey</div>
+        <div class='lakeselect'>Lake Darling</div>
+        <div class='lakeselect'>Lake Eunice</div>
+        <div class='lakeselect'>Lake Florida</div>
+        <div class='lakeselect'>Lake Franklin</div>
+        <div class='lakeselect'>Lake Geneva</div>
+        <div class='lakeselect'>Lake Hiawatha</div>
+        <div class='lakeselect'>Lake Hubert</div>
+        <div class='lakeselect'>Lake Ida</div>
+        <div class='lakeselect'>Lake Irene</div>
+        <div class='lakeselect'>Lake John</div>
+        <div class='lakeselect'>Lake Le Homme Dieu in Alexandria</div>
+        <div class='lakeselect'>Lake Lizzie</div>
+        <div class='lakeselect'>Lake Mary</div>
+        <div class='lakeselect'>Lake Maud</div>
+        <div class='lakeselect'>Lake Melissa</div>
+        <div class='lakeselect'>Lake Miltona</div>
+        <div class='lakeselect'>Lake Minnetonka</div>
+        <div class='lakeselect'>Lake Minnewashta</div>
+        <div class='lakeselect'>Lake Minnewaska</div>
+        <div class='lakeselect'>Lake Osakis</div>
+        <div class='lakeselect'>Lake Stella</div>
+        <div class='lakeselect'>Lake Stony</div>
+        <div class='lakeselect'>Lake Superior</div>
+        <div class='lakeselect'>Lake Sylvia</div>
+        <div class='lakeselect'>Lake Victoria</div>
+        <div class='lakeselect'>Lake Virginia</div>
+        <div class='lakeselect'>Lake Waconia</div>
+        <div class='lakeselect'>Lake Winnibigoshish</div>
+        <div class='lakeselect'>Leech Lake</div>
+        <div class='lakeselect'>Little McDonald Lake</div>
+        <div class='lakeselect'>Little Sand Lake</div>
+        <div class='lakeselect'>Lower Cullen Lake</div>
+        <div class='lakeselect'>Lower Hay Lake</div>
+        <div class='lakeselect'>Lower Prior Lake</div>
+        <div class='lakeselect'>Maple Lake</div>
+        <div class='lakeselect'>Mille Lacs Lake</div>
+        <div class='lakeselect'>Minnehaha Creek</div>
+        <div class='lakeselect'>Mississippi River</div>
+        <div class='lakeselect'>North Long Lake</div>
+        <div class='lakeselect'>North Union</div>
+        <div class='lakeselect'>Ossawinnamakee Lake</div>
+        <div class='lakeselect'>Otter Tail Lake</div>
+        <div class='lakeselect'>Otter Tail River</div>
+        <div class='lakeselect'>Paul Lake</div>
+        <div class='lakeselect'>Pelican Brook</div>
+        <div class='lakeselect'>Pelican Lake</div>
+        <div class='lakeselect'>Pickerel Lake</div>
+        <div class='lakeselect'>Pike Lake</div>
+        <div class='lakeselect'>Pine River</div>
+        <div class='lakeselect'>Pleasant Lake</div>
+        <div class='lakeselect'>Pocket Lake</div>
+        <div class='lakeselect'>Prairie Lake</div>
+        <div class='lakeselect'>Rebecca</div>
+        <div class='lakeselect'>Red River</div>
+        <div class='lakeselect'>Rice Lake</div>
+        <div class='lakeselect'>Rose Lake</div>
+        <div class='lakeselect'>Round Lake</div>
+        <div class='lakeselect'>Rusch Lake</div>
+        <div class='lakeselect'>Ruth Lake</div>
+        <div class='lakeselect'>Sallie Lake</div>
+        <div class='lakeselect'>Sand Lake</div>
+        <div class='lakeselect'>Signalness Lake</div>
+        <div class='lakeselect'>St. Croix River</div>
+        <div class='lakeselect'>St. Louis River</div>
+        <div class='lakeselect'>Sturgeon Lake</div>
+        <div class='lakeselect'>Sucker Lake</div>
+        <div class='lakeselect'>Sybill Lake</div>
+        <div class='lakeselect'>Taylor Lake</div>
+        <div class='lakeselect'>Upper Mississippi River National Wildlife and Fish Refuge</div>
+        <div class='lakeselect'>Upper Prior Lake</div>
+        <div class='lakeselect'>Vadnais Lake</div>
+        <div class='lakeselect'>Watab Lake</div>
+        <div class='lakeselect'>West Battle Lake</div>
+        <div class='lakeselect'>White Bear Lake</div>
+        <div class='lakeselect'>Zumbro Lake</div>
+        <div class='lakeselect'>Zumbro River</div>
+      </div>
 
   </div>
 
