--- a/20141005-cps-flowchart/builds/development/index.html
+++ b/20141005-cps-flowchart/builds/development/index.html
@@ -44,7 +44,7 @@
 <p class="noteText"><br />
 Note: Some totals add up to more than 100 percent due to overlapping responses.</p>
 
-<div class="byline">Source: Department of Human Services Child Welfare reports, Star Tribune analysis | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="../data/maindata.xlsx" target="new_">Download Data</a></div>
+<div class="byline">Source: Department of Human Services Child Welfare reports, Star Tribune analysis | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a></div>
 
 <script src="//code.jquery.com/jquery-latest.js"></script>
 <script src="js/d3.v3.min.js"></script>
