--- a/20170615-zebra/builds/development/index.html
+++ b/20170615-zebra/builds/development/index.html
@@ -18,81 +18,6 @@
  
 <div id="wrapper">
 
-<div class="slide" id="story">
-<div id="map"></div>
-
-<div class='map-overlay-container'>
-  <div class='map-overlay'>
-    <div>
-
-<div id="fullpage">
-
-  <div class="section " id="section0">
-      <div class="chartTitle">The beginning</div>
-      <div class="year chatter">YEARS</div>
-      <div class="chatter">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</div>
-  </div>
-  <div class="section" id="section1">
-      <div class="chartTitle">Patient zero</div>
-      <div class="year chatter">YEARS</div>
-      <div class="chatter">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</div>
-  </div>
-  <div class="section" id="section2">
-        <div class="chartTitle">First zebra mussels in Minnesota</div>
-        <div class="year chatter">YEARS</div>
-      <div class="chatter">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</div>
-  </div>
-  <div class="section" id="section3">
-      <div class="chartTitle">Aggressive spreading</div>
-      <div class="year chatter">YEARS</div>
-      <div class="chatter">an early host for zebras and the focus of much study. Mille Lacs zebras, contrary to intuition, has not been a spreader according to DNA  testing</div>
-  </div>
-  <div class="section" id="section4">
-      <div class="chartTitle">Lake Mille Lacs</div>
-      <div class="year chatter">YEARS</div>
-      <div class="chatter">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</div>
-  </div>
-  <div class="section" id="section5">
-      <div class="chartTitle">Lake Minnetonka</div>
-      <div class="year chatter">YEARS</div>
-      <div class="chatter">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</div>
-  </div>
-  <div class="section" id="section6">
-      <div class="chartTitle">Lake Winnibigoshish</div>
-      <div class="year chatter">YEARS</div>
-      <div class="chatter">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</div>
-  </div>
-  <div class="section" id="section7">
-      <div class="chartTitle">Isolating genetic variety</div>
-      <div class="year chatter">YEARS</div>
-      <div class="chatter">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</div>
-  </div>
-  <div class="section" id="section8">
-      <div class="chartTitle">National spread</div>
-      <div class="year chatter">YEARS</div>
-      <div class="chatter">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</div>
-  </div>
-</div>
-</div>
-
-<div class="byline">Source: Minnesota DNR | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="../data/maindata.xlsx" target="new_">Download Data</a></div>
-
-</div>
-
-<!-- <div id="info">
-    <h2 id='location-title'></h2>
-    <p id='location-description'></p>
-</div>
- -->
-<!--   <nav id="menu"></nav> -->
-  
-  </div>
-
-
-</div>
-
-<div class="breaker"></div>
-
   <div class="slide" id="lookup">
 
 <div id="database">
@@ -217,8 +142,8 @@
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 <script src="js/d3.v3.min.js"></script>
 <script src='js/mapbox-gl.js'></script>
-<script src='js/jquery.fullpage.min.js'></script>
-<script src="js/typed.min.js"></script> 
+<!-- <script src='js/jquery.fullpage.min.js'></script> -->
+<!-- <script src="js/typed.min.js"></script>  -->
 
 <script src="js/script.js"></script>
 
