style and chatter changes

--- a/20170615-zebra/builds/development/index.html
+++ b/20170615-zebra/builds/development/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>INVASION!</title>
+  <title>Infested Waters Filter</title>
   <meta name="description" content="INVASION!">
   <meta name="author" content="Frey Hargarten - StarTribune">
 
@@ -21,10 +21,10 @@
   <div class="slide" id="lookup">
 
 <div id="database">
-      <div class="title">Is your nearby lake or river infested with zebra mussels?</div>
-      <div class="description">More than 100 bodies of water in Minnesota have tested positive for the presence of zebra mussels so far. Use the search tool to see which lakes and rivers have been affected.</div>
+      <div class="title">INFESTED WATERS: HAS YOUR LAKE OR RIVER BEEN INVADED BY ZEBRA MUSSELS?</div>
+      <div class="description">More than 100 major bodies of water in Minnesota have tested positive for the presence of zebra mussels so far. See which lakes and rivers have been affected.</div>
 
-      <div id="filter" class="ui-widget"><input type="search" id="filter_box" placeholder="Search by lake or river" /></div>
+      <div id="filter" class="ui-widget"><input type="search" id="filter_box" placeholder="Filter by lake or river" /></div>
 
       <div id="listing">
         <div class='lakeselect'>Big Birch Lake</div>
