--- a/index_browse.html
+++ b/index_browse.html
@@ -425,7 +425,7 @@
 
 <div id="about">
 <img src="http://freyhargarten.com/_base/img/profile.jpg" width="200" id="profile" alt="profile" />
-<p>StribLab is the work of Frey Hargarten and many talented journalists across the StarTribune newsroom. All code and public datasets are open source and free for adaption and repurposing.</p><p><a href="http://bit.ly/2dHeC2O" key="E502 A15E A8D1 8CAA 478A F1CE 13AC DE60 A335 72D4">PGP Key</a></p>
+<p>StribLab is the work of <a href="https://plus.google.com/+JeffHargarten" rel="me">Frey Hargarten</a> and many talented journalists across the StarTribune newsroom. All code and public datasets are open source and free for adaption and repurposing.</p><p><a href="http://bit.ly/2dHeC2O" key="E502 A15E A8D1 8CAA 478A F1CE 13AC DE60 A335 72D4">PGP Key</a></p>
 
 <div class="breaker"></div>
 
