--- a/20170514-farmers_markets/builds/development/index.html
+++ b/20170514-farmers_markets/builds/development/index.html
@@ -86,13 +86,14 @@
 <!--         <div id="today">What's open today?</div> -->
         <div class="zoom">See All</div>
         <div class="clear">Clear All</div>
-        <div class="showing">Showing <span class="number">70</span> results</div>
+        <div class="showing">Showing <span class="number">72</span> results</div>
       </div>
     </div>
 </div>
 
 </div>
 
+<div class="breaker"></div>
 <div class="byline">Source: Star Tribune analysis | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="../data/maindata.xlsx" target="new_">Download Data</a></div>
 </div>
 
