--- a/20170805-test_scores/builds/development/index.html
+++ b/20170805-test_scores/builds/development/index.html
@@ -26,7 +26,7 @@
 </ul>
 
 <div id="bigstats">
-  <div class="headcell worse" type="null">
+<!--   <div class="headcell worse" type="null">
     <div class="label">falling short</div>
   </div>
   <div class="headcell expected" type="null">
@@ -35,59 +35,46 @@
   <div class="headcell better" type="null">
     <div class="label mobilekill">beating the odds</div>
     <div class="label mobileshow">beating odds</div>
-  </div>
+  </div> -->
 
-<div class="chartTitle mobilekill">Overall</div>
-  <div class="cell worse mobilekill" data="Falling short" type="O">
-    <div class="bigNum" id="failO">0%</div>
-<!--     <div class="label">falling short</div> -->
-  </div>
-  <div class="cell expected mobilekill" data="About as expected" type="O">
-    <div class="bigNum" id="metO">0%</div>
-<!--     <div class="label">as expected</div> -->
-  </div>
-  <div class="cell better mobilekill" data="Beating the odds" type="O">
-    <div class="bigNum" id="betterO">0%</div>
-<!--     <div class="label">beating the odds</div> -->
-  </div>
 <div class="chartTitle">Reading</div>
   <div class="cell worse" data="Falling short" type="R">
     <div class="bigNum" id="failR">0%</div>
-<!--     <div class="label">falling short</div> -->
+    <div class="label">falling short</div>
   </div>
   <div class="cell expected" data="About as expected" type="R">
     <div class="bigNum" id="metR">0%</div>
-<!--     <div class="label">as expected</div> -->
+    <div class="label">as expected</div>
   </div>
   <div class="cell better" data="Better than expected" type="R">
     <div class="bigNum" id="betterR">0%</div>
-<!--     <div class="label">better</div> -->
+    <div class="label">better</div>
   </div>
 <div class="chartTitle">Math</div>
   <div class="cell worse" data="Falling short" type="M">
     <div class="bigNum" id="failM">0%</div>
-<!--     <div class="label">falling short</div> -->
+    <div class="label">falling short</div>
   </div>
   <div class="cell expected" data="About as expected" type="M">
     <div class="bigNum" id="metM">0%</div>
-<!--     <div class="label">as expected</div> -->
+    <div class="label">as expected</div>
   </div>
   <div class="cell better" data="Better than expected" type="M">
     <div class="bigNum" id="betterM">0%</div>
-<!--     <div class="label">better</div> -->
+    <div class="label">better</div>
   </div>
-<div class="chartTitle mobilekill">Poverty</div>
-  <div class="cell worse mobilekill" data="High" type="P">
-    <div class="bigNum" id="failP">0%</div>
-<!--     <div class="label">high</div> -->
+<div class="chartTitle">Poverty</div>
+  <div class="cell gray5 povCell" data="High" type="P">
+<!--     <div class="bigNum" id="failP">0%</div> -->
+    <div class="label">high</div>
   </div>
-  <div class="cell expected mobilekill" data="Medium" type="P">
-    <div class="bigNum" id="metP">0%</div>
-<!--     <div class="label">medium</div> -->
+  <div class="cell gray3 povCell" data="Medium" type="P">
+<!--     <div class="bigNum" id="metP">0%</div> -->
+    <div class="label">medium</div>
   </div>
-  <div class="cell better mobilekill" data="Low" type="P">
-    <div class="bigNum" id="betterP">0%</div>
-<!--     <div class="label">low</div> -->
+  <div class="cell gray1 povCell" data="Low" type="P">
+<!--     <div class="bigNum" id="betterP">0%</div> -->
+    <div class="label">low</div>
   </div>
 </div>
 
