--- a/20170805-test_scores/builds/development/index.html
+++ b/20170805-test_scores/builds/development/index.html
@@ -17,7 +17,7 @@
 <body>
   <div id="wrapper">
 
-<div id="districtSelect">Click to select a district: <span id='thisDistrict'>All</span></div>
+<div id="districtSelect"><span class="directions" id="down">&#9660;</span> <span class="directions" id="left">&#9658;</span> Click to select a district: <span id='thisDistrict'>All</span></div>
 
 <div class="chatter mobilekill">Displays percentage of schools in selected district by how MCA proficiency rates compare to what would be expected based on poverty rates. <span class="mobilekill">Click the buttons in each category to filter the list of schools by reading and math performance or poverty levels.</span></div>
 
