--- a/20170830-school_flight/builds/development/index.html
+++ b/20170830-school_flight/builds/development/index.html
@@ -37,7 +37,7 @@
 
 <div class="chart">
 <div class="chartTitle">Who's leaving, by race</div>
-  <div class="chatter">Breaks down migrating students by racial/ethnic groups of <span class="legendary" style="background-color:#e41a1c;color:#ffffff">White</span>, <span class="legendary" style="background-color:#377eb8;color:#ffffff">Black</span>, <span class="legendary" style="background-color:#4daf4a;color:#ffffff">Asian</span>, <span class="legendary" style="background-color:#984ea3;color:#ffffff">Native American</span> or <span class="legendary" style="background-color:#ff7f00;color:#ffffff">Hispanic</span>.</div>
+  <div class="chatter">Shows percentage of <span class="legendary" style="background-color:#e41a1c;color:#ffffff">Whites</span>, <span class="legendary" style="background-color:#377eb8;color:#ffffff">Blacks</span>, <span class="legendary" style="background-color:#4daf4a;color:#ffffff">Asians</span>, <span class="legendary" style="background-color:#984ea3;color:#ffffff">Native Americans</span> and <span class="legendary" style="background-color:#ff7f00;color:#ffffff">Hispanics</span> leaving the district.</div>
   <div id="raceChart" class="chartDiv"></div>
 </div>
 
