--- a/20170830-school_flight/builds/development/index.html
+++ b/20170830-school_flight/builds/development/index.html
@@ -26,8 +26,8 @@
 
 <div class="divider"></div>
 
-<div id='thisDistrict'>A.C.G.C. Public School District</div>
-<div class="chatter statBar" id="county">Meeker County (OUTSTATE)</div>
+<div id='thisDistrict'>Statewide</div>
+<div class="chatter statBar" id="county">All Minnesota districts</div>
 
 <div class="chart">
   <div class="chartTitle">Where students are going</div>
