--- a/20170830-school_flight/builds/development/index.html
+++ b/20170830-school_flight/builds/development/index.html
@@ -26,37 +26,39 @@
 
 <div class="divider"></div>
 
-<div id='thisDistrict'>Statewide</div>
-<div class="chatter statBar" id="county">All Minnesota districts</div>
+<div id='thisDistrict'>Minneapolis Public School District</div>
+<div class="chatter statBar" id="county">Hennepin County (Core Cities)</div>
 
 <div class="chart">
-  <div class="chartTitle">Where students are going</div>
-  <div class="chatter">Displays the percentage migrating to <span class="legendary" style="background-color:#a3858b;color:#ffffff">charters</span> versus using <span class="legendary" style="background-color:#4c1926;color:#ffffff">open enrollment</span>.</div>
+  <div class="chartTitle">Students opting for other districts</div>
+  <div class="chatter">Percentage of school-aged residents attending to <span class="legendary" style="background-color:#a3858b;color:#ffffff">charter schools</span> or <span class="legendary" style="background-color:#4c1926;color:#ffffff">open enrolling</span> in another district.</div>
   <div id="leavingChart" class="chartDiv"></div>
 </div>
 
 <div class="chart">
-<div class="chartTitle">Who's leaving, by race</div>
-  <div class="chatter">Shows percentage of <span class="legendary" style="background-color:#e41a1c;color:#ffffff">Whites</span>, <span class="legendary" style="background-color:#377eb8;color:#ffffff">Blacks</span>, <span class="legendary" style="background-color:#4daf4a;color:#ffffff">Asians</span>, <span class="legendary" style="background-color:#984ea3;color:#ffffff">Native Americans</span> and <span class="legendary" style="background-color:#ff7f00;color:#ffffff">Hispanics</span> leaving the district.</div>
-  <div id="raceChart" class="chartDiv"></div>
+  <div class="chartTitle">Students coming in</div>
+  <div class="chatter">Percentage of the distrcts's enrollment from <span class="legendary" style="background-color:#865f67;color:#ffffff">students who live elsewhere</span>.</div>
+  <div id="incomingChart" class="chartDiv"></div>
 </div>
 
 <div class="chart">
-  <div class="chartTitle">How many students are incoming</div>
-  <div class="chatter">Shows the percentage of the school's enrollment that's <span class="legendary" style="background-color:#865f67;color:#ffffff">coming from other schools</span>.</div>
-  <div id="incomingChart" class="chartDiv"></div>
+<div class="chartTitle">School choice rates by race</div>
+  <div class="chatter">Percentage of <span class="legendary" style="background-color:#e41a1c;color:#ffffff">Whites</span>, <span class="legendary" style="background-color:#377eb8;color:#ffffff">Blacks</span>, <span class="legendary" style="background-color:#4daf4a;color:#ffffff">Asians</span>, <span class="legendary" style="background-color:#984ea3;color:#ffffff">Natives</span> and <span class="legendary" style="background-color:#ff7f00;color:#ffffff">Hispanics</span> attending charter schools or other districts.</div>
+  <div id="raceChart" class="chartDiv"></div>
+  <div class="byline">Note: populations less than three not represented</div>
 </div>
 
 <div class="chart">
   <div class="chartTitle">District enrollment vs. residents</div>
   <div class="chatter">Compares the number of <span class="legendary" style="background-color:#333333;color:#ffffff">residents</span> in a district to its student <span class="legendary" style="background-color:#693c46;color:#ffffff">enrollment</span> over time.</div>
   <div id="enrollmentChart" class="chartDiv"></div>
+  <div class="byline">Note: some records were redacted</div>
 </div>
 
 
 <div class="breaker"></div>
 
-<div class="byline">Source: Minnesota Department of Education, Star Tribune analysis | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="../data/maindata.xlsx" target="new_">Download Data</a>
+<div class="byline">Source: Minnesota Department of Education, Star Tribune analysis | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a><!--  | <a href="../data/maindata.xlsx" target="new_">Download Data</a> -->
 
 </div>
 
