--- a/20170830-school_flight/builds/development/index.html
+++ b/20170830-school_flight/builds/development/index.html
@@ -66,11 +66,15 @@
 </div>
 
 <div class="slide" id="charter">
-<div id="map"></div>
-
 <div class='map-overlay-container'>
 
   <div class='map-overlay'>
+  <div class="chartTitle">The spread of Minnesota charter schools</div>
+
+  <div class="chatter">Shows the  <span class="legendary" style="background-color:rgba(51,204,255, 0.45);color:#000000">openings</span> and <span class="legendary" style="background-color:rgba(204, 0, 0, 0.45);color:#000000">closings</span> of charter schools since 1995.</div>
+
+  <div class="breaker"></div>
+
     <div>
       <div class="switch selected" id="state">State</div>
       <div class="switch" id="metro">Metro</div>
@@ -80,7 +84,9 @@
 
 </div>
 
+<div id="map"></div>
 
+<div class="byline">Source: Minnesota Department of Education, Star Tribune analysis | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a><!--  | <a href="../data/maindata.xlsx" target="new_">Download Data</a> -->
 </div>
 
 <script src="//code.jquery.com/jquery-latest.js"></script>
