--- a/main.html
+++ b/main.html
@@ -276,8 +276,9 @@
 
 <div id="sidebar">
 
+
 <div class="icon sort-link selected articles" id="allProjects_m" data="startribune"><img src="img/striblab.png" alt="striblab" /></div>
-<!-- <div class="icon sort-link" id="twitter"><img src="img/twitter.png" alt="twitter" /></div> -->
+<div class="icon sort-link" id="blog"><img src="img/blog.png" alt="blog" /></div>
 <div class="icon sort-link" id="resources"><img src="img/tools.png" alt="tools" /></div>
 <div class="icon sort-link" id="tools"><img src="img/code.png" alt="code" /></div>
 <div class="icon github"><a class="icon sort-link" href="https://github.com/striblab" target="new_"><img data="github" src="img/github.png" alt="github" /></a></div>
@@ -285,11 +286,6 @@
 </div>
 
 <div id="content">
-
-<!-- <div id="twitterBlock" class="contentBox socialBox">
-<div class="follow"><a href="https://twitter.com/jeffhargarten" target="new_">Follow me on Twitter</a></div>
-<ul class="juicer-feed" data-feed-id="jeffhargarten" data-per="5" data-filter="Twitter"></ul>
-</div> -->
 
 <div id="articlePane" class="sectionBox">
 <div id="sorting" class="sectionBox">
@@ -317,9 +313,11 @@
 <div id="listHere"></div>
 </div>
 
-<!-- <div class="follow"><a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Follow me on Star Tribune</a></div> -->
 </div>
 
+<div id="blogBlock" class="blog">
+
+</div>
 
 <div id="resourcesBlock" class="resources">
 
@@ -423,26 +421,6 @@
 
 <div class="breaker"></div>
 
-<!-- <div id="about">
-<img src="http://freyhargarten.com/_base/img/profile.jpg" width="200" id="profile" alt="profile" />
-<p>StribLab is the work of <a href="https://plus.google.com/+JeffHargarten" rel="me">Frey Hargarten</a> and many talented journalists across the StarTribune newsroom. All code and public datasets are open source and free for adaption and repurposing.</p><p><a href="http://bit.ly/2dHeC2O" key="E502 A15E A8D1 8CAA 478A F1CE 13AC DE60 A335 72D4">PGP Key</a></p>
-
-<div class="breaker"></div>
-
-</div> -->
-
-<!-- <div id="topmenu">
-<div class="siteNav"><a href="http://freyhargarten.com"><button class="topbutton">Resume</button></a><div><a href="https://www.linkedin.com/in/jeffhargarten" target="new_"><img src="http://freyhargarten.com/_base/img/icons/linkedin.png" alt="linkedin" /></a><a href="https://www.facebook.com/jeffhargarten" target="new_"><img src="http://freyhargarten.com/_base/img/icons/facebook.png" alt="facebook" /></a><a href="https://www.instagram.com/jeffhargarten/" target="new_"><img src="http://freyhargarten.com/_base/img/icons/instagram.png" alt="instagram" /></a></div></div>
-
-<div class="siteNav"><a href="http://striblab.github.io/startribune_dataviz/index_browse.html"><button class="topbutton">Articles</button></a><div><a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_"><img src="http://freyhargarten.com/_base/img/icons/striblab.png" alt="striblab" /></a><a href="http://twitter.com/jeffhargarten" target="new_"><img src="http://freyhargarten.com/_base/img/icons/twitter.png" alt="twitter" /></a><a href="https://github.com/jeffhargarten" target="new_"><img src="http://freyhargarten.com/_base/img/icons/github.png" alt="github" /></a></div></div>
-
-<div class="siteNav"><a href="http://datamancy.org"><button class="topbutton">Blog</button></a><div><a href="https://www.mixcloud.com/jeff-hargarten/" target="new_"><img src="http://freyhargarten.com/_base/img/icons/mixcloud.png" alt="mixcloud" /></a><a href="https://www.vimeo.com/jeffhargarten" target="new_"><img src="http://freyhargarten.com/_base/img/icons/vimeo.png" alt="vimeo" /></a><a href="https://giphy.com/channel/jeffhargarten" target="new_"><img src="http://freyhargarten.com/_base/img/icons/giphy.png" alt="giphy" /></a></div></div>
-
-<div class="siteNav"><a href="http://deadskies.org"><button class="topbutton this">Artwork</button></a><div><a href="http://jhshadowflare.deviantart.com/" target="new_"><img src="http://freyhargarten.com/_base/img/icons/deviantart.png" alt="deviantart" /></a><a href="http://jeffhargarten.tumblr.com/" target="new_"><img src="http://freyhargarten.com/_base/img/icons/tumblr.png" alt="tumblr" /></a><a href="https://soundcloud.com/jeffhargarten" target="new_"><img src="http://freyhargarten.com/_base/img/icons/soundcloud.png" alt="soundcloud" /></a></div></div>
-</div>
-
-<p></p> -->
-
 <div id="footer"><span><a href="https://creativecommons.org/" target="new_"><img src="http://freyhargarten.com/_base/img/cc.large.png" width="15" alt="CC" /></a></span> Star Tribune<!-- , Frey Hargarten --> 2017</div>
 
 </div>
@@ -522,10 +500,10 @@ $( ".sort-link" ).click(function() {
   $("." + $(this).attr("id")).show();
   $("#resourcesBlock").hide();
   if ($(this).attr("id") != "tools") { $(".tools").hide(); }
-  if ($(this).attr("id") == "twitter") { $(".articleEntry, #contributorsBlock").hide(); $("#resourcesBlock").hide(); $("#articlePane").hide(); $("#twitterBlock").show(); }
+  if ($(this).attr("id") == "blog") { $(".articleEntry, #contributorsBlock").hide(); $("#resourcesBlock").hide(); $("#articlePane").hide(); $("#blogBlock").show(); }
   if ($(this).attr("id") == "resources") { $(".articleEntry, #contributorsBlock").hide(); $("#resourcesBlock").show();
-  $("#twitterBlock").hide(); }
-  if ($(this).attr("id") == "contributors") { $("#resourcesBlock, .articleEntry").hide(); $(" #contributorsBlock").show(); $("#twitterBlock").hide(); }
+  $("#blogBlock").hide(); }
+  if ($(this).attr("id") == "contributors") { $("#resourcesBlock, .articleEntry").hide(); $(" #contributorsBlock").show(); $("#blogBlock").hide(); }
 });
 
 $( "#allProjects, #allProjects_m" ).click(function() {
