--- a/20170830-school_flight/builds/development/index.html
+++ b/20170830-school_flight/builds/development/index.html
@@ -31,13 +31,13 @@
 
 <div class="chart">
   <div class="chartTitle">Students opting for other districts</div>
-  <div class="chatter">Percentage of school-aged residents attending to <span class="legendary" style="background-color:#a3858b;color:#ffffff">charter schools</span> or <span class="legendary" style="background-color:#4c1926;color:#ffffff">open enrolling</span> in another district.</div>
+  <div class="chatter">Percentage of school-aged residents attending <span class="legendary" style="background-color:#a3858b;color:#ffffff">charter schools</span> or <span class="legendary" style="background-color:#4c1926;color:#ffffff">open enrolling</span> in another district.</div>
   <div id="leavingChart" class="chartDiv"></div>
 </div>
 
 <div class="chart">
   <div class="chartTitle">Students coming in</div>
-  <div class="chatter">Percentage of the distrcts's enrollment from <span class="legendary" style="background-color:#865f67;color:#ffffff">students who live elsewhere</span>.</div>
+  <div class="chatter">Percentage of the districts's enrollment from <span class="legendary" style="background-color:#865f67;color:#ffffff">students who live elsewhere</span>.</div>
   <div id="incomingChart" class="chartDiv"></div>
 </div>
 
