--- a/20170830-school_flight/builds/development/index.html
+++ b/20170830-school_flight/builds/development/index.html
@@ -43,14 +43,14 @@
 
 <div class="chart">
 <div class="chartTitle">School choice rates by race</div>
-  <div class="chatter">Percentage of <span class="legendary" style="background-color:#e41a1c;color:#ffffff">Whites</span>, <span class="legendary" style="background-color:#377eb8;color:#ffffff">Blacks</span>, <span class="legendary" style="background-color:#4daf4a;color:#ffffff">Asians</span>, <span class="legendary" style="background-color:#984ea3;color:#ffffff">Natives</span> and <span class="legendary" style="background-color:#ff7f00;color:#ffffff">Hispanics</span> attending charter schools or other districts.</div>
+   <div class="chatter">Compares <span class="legendary" style="background-color:#333333;color:#ffffff">district's residents</span> by race to percentage of <span class="legendary" style="background-color:#865f67;color:#ffffff">students who enrolled in other districts</span> in 2016.</div>
   <div id="raceChart" class="chartDiv"></div>
   <div class="byline">Note: populations less than three not represented</div>
 </div>
 
 <div class="chart">
   <div class="chartTitle">District enrollment vs. residents</div>
-  <div class="chatter">Compares the number of <span class="legendary" style="background-color:#333333;color:#ffffff">residents</span> in a district to its student <span class="legendary" style="background-color:#693c46;color:#ffffff">enrollment</span> over time.</div>
+     <div class="chatter">Compares the number of <span class="legendary" style="background-color:#333333;color:#ffffff">residents</span> in a district to its student <span class="legendary" style="background-color:#693c46;color:#ffffff">enrollment</span> over time.</div>
   <div id="enrollmentChart" class="chartDiv"></div>
   <div class="byline">Note: some records were redacted</div>
 </div>
@@ -58,7 +58,7 @@
 
 <div class="breaker"></div>
 
-<div class="byline">Source: Minnesota Department of Education, Star Tribune analysis | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a><!--  | <a href="../data/maindata.xlsx" target="new_">Download Data</a> -->
+<div class="byline">Source: Minnesota Department of Education, Star Tribune analysis | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="../data/maindata.xlsx" target="new_">Download Data</a>
 
 </div>
 
