--- a/main.html
+++ b/main.html
@@ -32,7 +32,7 @@
       a:hover { color:#333 !important; color:inherit !important; }
       .link a:hover { text-decoration:none !important; color: #87C944 !important; }
       .masthead  a { color:#000 !important; }
-      .masthead { font-weight:900; font-family:Helvetica; /*letter-spacing:20px;*/ text-align:left !important; font-size:1.5em; }
+      .masthead { font-weight:900; font-family:Helvetica; /*letter-spacing:20px;*/ text-align:center !important; font-size:1.5em; }
       p { font-family:Helvetica; }
       #wrapper { width:800px;; margin-right:auto; margin-left:auto; }
       h1 { font-family:"Avant Garde",Avantgarde,"Century Gothic",CenturyGothic,AppleGothic,sans-serif; text-align:left; letter-spacing:20px; }
@@ -62,7 +62,7 @@
       .linkage { text-align:left; }
       #overall { text-align:left !important; }
       div#at4-share { display:none !important; }
-      .tagline { text-align:left !important; }
+      .tagline { text-align:center !important; }
       .at-icon { background-color:#87C944 !important; }
 
 /*ENTRIES*/
@@ -169,12 +169,12 @@
       #footerStuff { display:none; }
       #intro { text-align:center; }
       #photo img { width:200px; }
-     .footerLinks { display:inline-block; width:100%; text-align:center; vertical-align:top; }
-     #footer { text-align:center; padding-top:5px; border-top:1px solid #ddd; padding:15px; }
-     .footerLinks { display:inline-block; width:100%; text-align:center; vertical-align:top; font-size:.9em; }
-     .linkDiv { display:inline-block !important; margin:5px; }
-     .scrollToTop { color:#aaa !important; text-align:center; padding:15px; }
-     .scrollToTop:hover { color:#333 !important; cursor:pointer; }
+      .footerLinks { display:inline-block; width:100%; text-align:center; vertical-align:top; }
+      #footer { text-align:center; padding-top:5px; border-top:1px solid #ddd; padding:15px; }
+      .footerLinks { display:inline-block; width:100%; text-align:center; vertical-align:top; font-size:.9em; }
+      .linkDiv { display:inline-block !important; margin:5px; }
+      .scrollToTop { color:#aaa !important; text-align:center; padding:15px; }
+      .scrollToTop:hover { color:#333 !important; cursor:pointer; }
       #intro { text-align:center; }
       #photo img { width:200px; }
       #about { margin-top:15px; border-top:1px solid #ddd;}
@@ -266,7 +266,8 @@
 <body>
 <div id="wrapper">
 <div id="intro" class="section">
-<div class='masthead'><a href="./index_browse.html">striblab</a></div>
+<img src="https://avatars2.githubusercontent.com/u/16613380?v=4&s=100" />
+<div class='masthead'><a href="./index_browse.html">StribLab</a></div>
 <p class='tagline'>converging storytelling, data, code, and design</p>
 </div>
 
@@ -277,11 +278,11 @@
 <div id="sidebar">
 
 
-<div class="icon sort-link selected articles" id="allProjects_m" data="startribune"><img src="img/striblab.png" alt="striblab" /></div>
 <div class="icon sort-link" id="blog"><img src="img/blog.png" alt="blog" /></div>
+<div class="icon sort-link selected articles" id="allProjects_m" data="startribune"><img src="img/striblab.png" alt="striblab" /></div>
 <div class="icon sort-link" id="resources"><img src="img/tools.png" alt="tools" /></div>
 <div class="icon sort-link" id="tools"><img src="img/code.png" alt="code" /></div>
-<div class="icon github"><a class="icon sort-link" href="https://github.com/striblab" target="new_"><img data="github" src="img/github.png" alt="github" /></a></div>
+<div class="icon sort-link"><a href="https://github.com/striblab"><img data="github" src="img/github.png" alt="github" /></a></div>
 
 </div>
 
