--- a/20170826-cabins/builds/development/index.html
+++ b/20170826-cabins/builds/development/index.html
@@ -34,6 +34,23 @@
 <div class="byline">Source: Minnesota Department of Revenue | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="../data/maindata.xlsx" target="new_">Download Data</a></div>
 </div>
 
+<div class="slide" id="top">
+<div class="chartTitle">Top cabin counties</div>
+<div class="chatter">Sorts Minnesota counties by the percentage of residential property taxes represented by cabins and the change in that metric from 2001 to 2016.</div>
+
+
+<div id="filter"><input type="search" id="filter_box" placeholder="Search by county" /></div>
+
+<div id="heading"><div class='tableHead partyBar hSort' data="county">County</div><div class='tableHead hSort selected pct' data="cabin_share_2016">% Cabin Taxes</div><div class='tableHead hSort pct' data="cabin_share_diff">% Change</div></div>
+<div id="countyList" class="table" data="cabins">
+
+</div>
+
+<div id="tableBottom"><span class="scrollToTop">Return to Top</span> | showing <span id="results">87</span> results</div>
+
+<div class="byline">Source: Minnesota Department of Revenue | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="../data/maindata.xlsx" target="new_">Download Data</a></div>
+</div>
+
 </div>
 
 <script src="//code.jquery.com/jquery-latest.js"></script>
