--- a/20170825-pipelines/builds/development/index.html
+++ b/20170825-pipelines/builds/development/index.html
@@ -18,16 +18,16 @@
 
 <div class="slide" id="spills">
 <div class="chartTitle">Enbridge pipeline spills</div>
-<div class="chatter">Shows <span class="legendary" style="background-color:#333333;color:#ffffff;">Enbridge pipelines</span> and <span class="legendary" style="background-color:#b70c0c;color:#ffffff;">spills or releases</span> from 2010 to 2016.</div>
+<div class="chatter">Shows <span class="legendary" style="background-color:#333333;color:#ffffff;">Enbridge pipelines</span> and <span class="legendary" style="background-color:#b70c0c;color:#ffffff;">spills or releases</span> from 2002 to 2016.</div>
 
 <div id="map"></div>
 
-<div class="byline">Source: <a href="https://www.phmsa.dot.gov/pipeline/library/data-stats/pipelineincidenttrends" target="new_">PHMSA</a>, <a href="https://www.eia.gov/maps/layer_info-m.php" target="new_">U.S. Energy Information Administration</a>, Minnesota Pollution Control Agency, Star Tribune analysis | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="../data/maindata.xlsx" target="new_">Download Data</a>
+<div class="byline">Source: <a href="https://www.phmsa.dot.gov/pipeline/library/data-stats/pipelineincidenttrends" target="new_">PHMSA</a>, <a href="https://www.eia.gov/maps/layer_info-m.php" target="new_">U.S. Energy Information Administration</a>, Star Tribune analysis | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="../data/maindata.xlsx" target="new_">Download Data</a>
 </div>
 
 <div class="slide" id="timeline">
 <div class="chartTitle">Enbridge pipeline spills by year</div>
-<div class="chatter">About 140 <span class="legendary" style="background-color:#b70c0c;color:#ffffff;">spills or releases</span> have occured have on Enbridge-operated pipelines nationwide since 2010.</div>
+<div class="chatter">About 329 <span class="legendary" style="background-color:#b70c0c;color:#ffffff;">spills or releases</span> have occured have on Enbridge-operated pipelines nationwide since 2010.</div>
 
 <div id="chartTrend"></div>
 
@@ -38,11 +38,33 @@
 
 <div class="slide" id="minnesota">
 <div class="chartTitle">Enbridge pipeline spills in Minnesota by year</div>
-<div class="chatter">Nearly 100 <span class="legendary" style="background-color:#b70c0c;color:#ffffff;">spills or releases</span> have occured have on Enbridge-operated pipelines in Minnesota since 2002.</div>
+<div class="chatter">More than 100 <span class="legendary" style="background-color:#b70c0c;color:#ffffff;">spills or releases</span> have occured have on Enbridge-operated pipelines in Minnesota since 2002.</div>
 
 <div id="chartMN"></div>
 
 <div class="byline">Source: <a href="https://www.phmsa.dot.gov/pipeline/library/data-stats/pipelineincidenttrends" target="new_">PHMSA</a>, <a href="https://www.eia.gov/maps/layer_info-m.php" target="new_">U.S. Energy Information Administration</a>, Minnesota Pollution Control Agency, Star Tribune analysis | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="../data/maindata.xlsx" target="new_">Download Data</a>
+</div>
+
+</div>
+
+<div class="slide" id="mnspills">
+<div class="chartTitle">Minnesota pipeline incidents by year</div>
+<div class="chatter">Since 1997, there have been 250 <span class="legendary" style="background-color:#b70c0c;color:#ffffff;">pipeline incidents</span> resulting in nine deaths, 15 injuries and $65 million in damage.</div>
+
+<div id="chartMNSpills"></div>
+
+<div class="byline">Source: <a href="https://hip.phmsa.dot.gov/analyticsSOAP/saw.dll?Portalpages" target="new_">PHMSA</a>, <a href="https://www.eia.gov/maps/layer_info-m.php" target="new_">U.S. Energy Information Administration</a>, Minnesota Pollution Control Agency, Star Tribune analysis | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="../data/maindata.xlsx" target="new_">Download Data</a>
+</div>
+
+</div>
+
+<div class="slide" id="incidents">
+<div class="chartTitle">National pipeline incidents by year</div>
+<div class="chatter">Since 1997, there have been nearly 11,500 <span class="legendary" style="background-color:#b70c0c;color:#ffffff;">pipeline incidents</span> resulting in 324 deaths and 1,333 injuries. Incidents had been rising since 2012 but dropped in 2016.</div>
+
+<div id="chartNational"></div>
+
+<div class="byline">Source: <a href="https://hip.phmsa.dot.gov/analyticsSOAP/saw.dll?Portalpages" target="new_">PHMSA</a>, <a href="https://www.eia.gov/maps/layer_info-m.php" target="new_">U.S. Energy Information Administration</a>, Minnesota Pollution Control Agency, Star Tribune analysis | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="../data/maindata.xlsx" target="new_">Download Data</a>
 </div>
 
 </div>
