--- a/20170826-cabins/builds/development/index.html
+++ b/20170826-cabins/builds/development/index.html
@@ -34,6 +34,24 @@
 <div class="byline">Source: Minnesota Department of Revenue | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="../data/maindata.xlsx" target="new_">Download Data</a></div>
 </div>
 
+<div class="slide" id="count" style="display:none !important;">
+<div class="chartTitle">Counting Minnesota's cabins</div>
+<div class="chatter">There are about 124,000 seasonal recreational properties in Minnesota, mostly concetrated in northern counties. Shaded from <span class="legendary gray1">less</span> to <span class="legendary gray5">more</span>.</div>
+
+<div id="mapCount" class="map"><svg width="320" height="350" viewBox="0 0 500 550" preserveAspectRatio="xMidYMid"></svg></div>
+
+<div class="byline">Source: Minnesota Department of Revenue | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="../data/maindata.xlsx" target="new_">Download Data</a></div>
+</div>
+
+<div class="slide" id="timeline" style="display:none !important;">
+<div class="chartTitle">Minnesota cabins over time</div>
+<div class="chatter">The number of <span class="legendary gray1">cabins</span> in Minnesota has increased drastically since 2001.</div>
+
+<div id="chartCabins" class="chart"></div>
+
+<div class="byline">Source: Minnesota Department of Revenue | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="../data/maindata.xlsx" target="new_">Download Data</a></div>
+</div>
+
 <div class="slide" id="top">
 <div class="chartTitle">Top cabin counties</div>
 <div class="chatter">Sorts Minnesota counties by the percentage of residential property taxes represented by cabins and the change in that metric from 2001 to 2016.</div>
@@ -55,6 +73,7 @@
 
 <script src="//code.jquery.com/jquery-latest.js"></script>
 <script src="js/d3.v3.min.js"></script>
+<script src="js/c3.min.js"></script> 
 
 <script src="js/script.js"></script>
  
