--- a/20170828-airport_noise/builds/development/index.html
+++ b/20170828-airport_noise/builds/development/index.html
@@ -23,6 +23,7 @@
 <div class="chatter">Data shows the impact of airport noise at <span class="legendary orange1">55 decibels</span> versus the <span class="legendary orange3">65 decibels</span> tracked by the Federal Aviation Administration, along with <span class="legendary orange4">60</span> and <span class="legendary orange5">70 decibels</span> for reference.</div>
 
 <div id="map_blocks"></div>
+<div id="geocoder"></div>
 
 <div class="byline">Source: Metropolitan Airports Commission | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a><!--  | <a href="../data/maindata.xlsx" target="new_">Download Data</a> --></div>
 
