--- a/main.html
+++ b/main.html
@@ -41,7 +41,10 @@
       button:focus { outline:0 !important; }
       :focus { outline:0; }
       a h3 { color:#000 !important; font-family:"Avant Garde",Avantgarde,"Century Gothic",CenturyGothic,AppleGothic,sans-serif; text-align:left; }
+      #blogBlock { display:none; }
       h4 { color:#333; text-align:center; margin:0; padding:10px 0 0; }
+      .chartTitle { font-family: "Benton Sans", Helvetica, Arial, sans-serif !important; font-weight: 900; margin-top: 15px; font-size: 1.2em; }      
+      .chatter { line-height:160%; font-family: "Benton Sans", Helvetica, Arial, sans-serif !important; font-size: .9em; margin-top: 5px; }
 
 /*HEADER*/
       .starlogo { float:left; margin:15px; }
@@ -277,9 +280,8 @@
 
 <div id="sidebar">
 
-
-<div class="icon sort-link" id="blog"><img src="img/blog.png" alt="blog" /></div>
 <div class="icon sort-link selected articles" id="allProjects_m" data="startribune"><img src="img/striblab.png" alt="striblab" /></div>
+<div class="icon sort-link" id="blog"><img src="img/blog.png" alt="blog" /></div>
 <div class="icon sort-link" id="resources"><img src="img/tools.png" alt="tools" /></div>
 <div class="icon sort-link" id="tools"><img src="img/code.png" alt="code" /></div>
 <div class="icon sort-link"><a href="https://github.com/striblab"><img data="github" src="img/github.png" alt="github" /></a></div>
@@ -317,7 +319,9 @@
 </div>
 
 <div id="blogBlock" class="blog">
-
+  <div class="chartTitle">Welcome</div>
+  <div class="chatter">Welcome to StribLab, the Star Tribune's aggregation of data-driven, visual storytelling.</div>
+  <div class="chatter">Here you will find links to tools, source code and other resources related to many data-drive enterprise projects by various team members around the newsroom.</div>
 </div>
 
 <div id="resourcesBlock" class="resources">
