--- a/20170825-pipelines/builds/development/index.html
+++ b/20170825-pipelines/builds/development/index.html
@@ -18,7 +18,7 @@
 
 <div class="slide" id="spills">
 <div class="chartTitle">Enbridge pipeline spills in Minnesota</div>
-<div class="chatter">Shows <span class="legendary" style="background-color:#b70c0c;color:#ffffff;">Enbridge pipelines</span> and <span class="legendary gray5">major</span> and <span class="legendary gray2">minor</span> spills or releases</span> from 2002 to 2016. Locations are approximates based on available data.</div>
+<div class="chatter">Shows <span class="legendary" style="background-color:#b70c0c;color:#ffffff;">Enbridge pipelines</span> and <span class="legendary gray5">spills or releases</span> from 2002 to 2016. Locations are approximates based on available data.</div>
 
 <div id="map"></div>
 
@@ -39,7 +39,7 @@
 
 <div class="slide" id="minnesota">
 <div class="chartTitle">Enbridge pipeline spills in Minnesota by year</div>
-<div class="chatter">About 160 spill or release incidents on Enbridge-operated pipelines in Minnesota have been reported to the <span class="legendary gray5">PHMSA</span> and <span class="legendary gray2">MPCA</span> since 2002.</div>
+<div class="chatter">About 60 significant <span class="legendary gray5">spill or release incidents</span> on Enbridge-operated pipelines in Minnesota since 2002.</div>
 
 <div id="chartMN"></div>
 
@@ -48,9 +48,9 @@
 
 </div>
 
-<div class="slide" id="mnspills" style="display:none !important;">
+<div class="slide" id="mnspills">
 <div class="chartTitle">Minnesota pipeline incidents by year</div>
-<div class="chatter">Since 1997, there have been 250 <span class="legendary" style="background-color:#333333;color:#ffffff;">pipeline incidents</span> resulting in nine deaths, 15 injuries and $65 million in damage.</div>
+<div class="chatter">Since 2002, there have been 207 <span class="legendary" style="background-color:#333333;color:#ffffff;">pipeline incidents</span> in Minnesota, resulting in five deaths, 10 injuries and about $50 million in damage.</div>
 
 <div id="chartMNSpills"></div>
 
@@ -59,9 +59,9 @@
 
 </div>
 
-<div class="slide" id="incidents" style="display:none !important;">
+<div class="slide" id="incidents">
 <div class="chartTitle">National pipeline incidents by year</div>
-<div class="chatter">Since 1997, there have been nearly 11,500 <span class="legendary" style="background-color:#333333;color:#ffffff;">pipeline incidents</span> resulting in 324 deaths and 1,333 injuries. Incidents had been rising since 2012 but dropped in 2016.</div>
+<div class="chatter">Since 1997, there have been nearly 11,500 <span class="legendary" style="background-color:#333333;color:#ffffff;">pipeline incidents</span> nationally, resulting in 324 deaths and 1,333 injuries. Incidents had been rising since 2012 but dropped in 2016.</div>
 
 <div id="chartNational"></div>
 
