--- a/20170826-cabins/builds/development/index.html
+++ b/20170826-cabins/builds/development/index.html
@@ -36,7 +36,7 @@
 
 <div class="slide" id="count">
 <div class="chartTitle">Counting Minnesota's cabins</div>
-<div class="chatter">There are about 124,000 seasonal recreational properties in Minnesota, mostly concetrated in northern counties. Shaded from <span class="legendary gray1">less</span> to <span class="legendary gray5">more</span> based on percent change of cabins in each county from 2004 to 2016.</div>
+<div class="chatter">There are currently about 124,000 seasonal recreational properties in Minnesota, mostly concetrated in northern counties. Shaded from <span class="legendary gray1">less</span> to <span class="legendary gray5">more</span> based on the number of seasonal recreational properties in 2015.</div>
 
 <div id="mapCount" class="map"><svg width="320" height="350" viewBox="0 0 500 550" preserveAspectRatio="xMidYMid"></svg></div>
 
@@ -45,7 +45,7 @@
 
 <div class="slide" id="timeline">
 <div class="chartTitle">Minnesota cabins over time</div>
-<div class="chatter">The number of <span class="legendary gray5">cabins</span> in Minnesota has increased drastically since 2004.</div>
+<div class="chatter">The number of <span class="legendary gray5">cabins</span> in Minnesota has increased steadily over the years.</div>
 
 <div id="chartCabins" class="chart"></div>
 
@@ -59,7 +59,7 @@
 
 <div id="filter"><input type="search" id="filter_box" placeholder="Search by county" /></div>
 
-<div id="heading"><div class='tableHead partyBar hSort' data="county">County</div><div class='tableHead hSort selected pct' data="cabin_share_2016">% Cabin Taxes</div><div class='tableHead hSort pct' data="cabin_share_diff">% Change</div></div>
+<div id="heading"><div class='tableHead partyBar hSort' data="county">County</div><div class='tableHead hSort selected pct' data="cabin_share_2016">Cabin Taxes</div><div class='tableHead hSort pct' data="cabin_share_diff">Tax Change</div><div class='tableHead hSort pct' data="cabins">Cabins 2015</div></div>
 <div id="countyList" class="table" data="cabins">
 
 </div>
