--- a/20170825-pipelines/builds/development/index.html
+++ b/20170825-pipelines/builds/development/index.html
@@ -39,7 +39,7 @@
 
 <div class="slide" id="minnesota">
 <div class="chartTitle">Enbridge pipeline spills in Minnesota by year</div>
-<div class="chatter">About 60 significant <span class="legendary gray5">spill or release incidents</span> on Enbridge-operated pipelines in Minnesota since 2002.</div>
+<div class="chatter">About 60 significant <span class="legendary gray5">spill or release incidents</span> have occurred on Enbridge-operated pipelines in Minnesota since 2002.</div>
 
 <div id="chartMN"></div>
 
