--- a/20170825-pipelines/builds/development/index.html
+++ b/20170825-pipelines/builds/development/index.html
@@ -18,7 +18,7 @@
 
 <div class="slide" id="spills">
 <div class="chartTitle">Enbridge pipeline spills in Minnesota</div>
-<div class="chatter">Shows <span class="legendary" style="background-color:#b70c0c;color:#ffffff;">Enbridge pipelines</span> and <span class="legendary gray5">spills or releases</span> from 2002 to 2016. Locations are approximates based on available data.</div>
+<div class="chatter">Shows <span class="legendary" style="background-color:#b70c0c;color:#ffffff;">Enbridge pipelines</span> and <span class="legendary gray5">spills or releases</span> of 5 ore more barrels in volume from 2002 to 2016. Locations are approximates based on available data.</div>
 
 <div id="map"></div>
 
@@ -26,20 +26,9 @@
 </div>
 </div>
 
-<div class="slide" id="timeline" style="display:none !important;">
-<div class="chartTitle">Enbridge pipeline spills by year</div>
-<div class="chatter">At least 281 <span class="legendary" style="background-color:#333333;color:#ffffff;">spills or releases</span> have occured have on Enbridge-operated pipelines nationwide since 2002, with a sharp decline in 2016.</div>
-
-<div id="chartTrend"></div>
-
-<div class="byline">Source: <a href="https://www.phmsa.dot.gov/pipeline/library/data-stats/pipelineincidenttrends" target="new_">PHMSA</a>, <a href="https://www.eia.gov/maps/layer_info-m.php" target="new_">U.S. Energy Information Administration</a>, Minnesota Pollution Control Agency, Star Tribune analysis | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="../data/maindata.xlsx" target="new_">Download Data</a>
-</div>
-
-</div>
-
 <div class="slide" id="minnesota">
 <div class="chartTitle">Enbridge pipeline spills in Minnesota by year</div>
-<div class="chatter">About 60 significant <span class="legendary gray5">spill or release incidents</span> have occurred on Enbridge-operated pipelines in Minnesota since 2002.</div>
+<div class="chatter">About 60 <span class="legendary gray5">spill or release incidents</span> 5 or more barrels in volume have occurred on Enbridge-operated pipelines in Minnesota since 2002.</div>
 
 <div id="chartMN"></div>
 
@@ -67,6 +56,17 @@
 
 <div class="byline">Source: <a href="https://hip.phmsa.dot.gov/analyticsSOAP/saw.dll?Portalpages" target="new_">PHMSA</a>, <a href="https://www.eia.gov/maps/layer_info-m.php" target="new_">U.S. Energy Information Administration</a>, Minnesota Pollution Control Agency, Star Tribune analysis | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="../data/maindata.xlsx" target="new_">Download Data</a>
 </div>
+
+<!-- <div class="slide" id="timeline" style="display:none !important;">
+<div class="chartTitle">Enbridge pipeline spills by year</div>
+<div class="chatter">At least 281 <span class="legendary" style="background-color:#333333;color:#ffffff;">spills or releases</span> have occured have on Enbridge-operated pipelines nationwide since 2002, with a sharp decline in 2016.</div>
+
+<div id="chartTrend"></div>
+
+<div class="byline">Source: <a href="https://www.phmsa.dot.gov/pipeline/library/data-stats/pipelineincidenttrends" target="new_">PHMSA</a>, <a href="https://www.eia.gov/maps/layer_info-m.php" target="new_">U.S. Energy Information Administration</a>, Minnesota Pollution Control Agency, Star Tribune analysis | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="../data/maindata.xlsx" target="new_">Download Data</a>
+</div>
+
+</div> -->
 
 </div>
 
