--- a/20170825-pipelines/builds/development/index.html
+++ b/20170825-pipelines/builds/development/index.html
@@ -18,7 +18,7 @@
 
 <div class="slide" id="spills">
 <div class="chartTitle">Enbridge pipeline spills in Minnesota</div>
-<div class="chatter">Shows <span class="legendary" style="background-color:#b70c0c;color:#ffffff;">Enbridge pipelines</span> and <span class="legendary gray5">spills or releases</span> of 5 ore more barrels in volume from 2002 to 2016. Locations are approximates based on available data.</div>
+<div class="chatter">Shows <span class="legendary" style="background-color:#b70c0c;color:#ffffff;">Enbridge pipelines</span> and <span class="legendary gray5">spills or releases</span> from 2002 to 2016. Locations are approximates based on available data.</div>
 
 <div id="map"></div>
 
