--- a/20170825-pipelines/builds/development/index.html
+++ b/20170825-pipelines/builds/development/index.html
@@ -28,7 +28,7 @@
 
 <div class="slide" id="mnspills">
 <div class="chartTitle">Minnesota pipeline incidents by year</div>
-<div class="chatter">Since 2002, there have been 207 <span class="legendary" style="background-color:#333333;color:#ffffff;">pipeline incidents</span> in Minnesota, resulting in five deaths, 10 injuries and about $50 million in damage.</div>
+<div class="chatter">Since 2002, there have been 125 hazardous liquid <span class="legendary" style="background-color:#333333;color:#ffffff;">pipeline incidents</span> in Minnesota, resulting in two deaths, two injuries and about $40 million in damage.</div>
 
 <div id="chartMNSpills"></div>
 
